# OpenAI-Robot

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: child_safety_guide.md  test_child_safety.py
migrations/: 001_init.py  002_add_speech_columns.py  README.md  __init__.py  deploy_example.ps1  deploy_example.sh  migrate.py  migration_runner.py
my_openai_robot/: __init__.py  __main__.py  audio_io.py  billing_tracker.py  child_safety.py  config.py  conversation_manager.py  llm_client.py  speech_service.py
